--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,36 +1,85 @@
-name: CI Github Actions
-run-name: ${{ github.actor }} Node CI Github Actions
+name: Full CI Pipeline
 
-on: [push]
+on:
+  push:
+    branches: ['**']
+  pull_request:
 
 jobs:
-  build:
-
+  setup:
+    name: Setup & Install
     runs-on: ubuntu-latest
-    
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x, 23.x]
-        os: [ubuntu-latest, windows-latest, macos-latest]
-    
+    outputs:
+      node_modules_cache_key: ${{ steps.cache-node-modules.outputs.cache-hit }}
     steps:
-      - name: Check out repository code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: '23.x'
           cache: 'npm'
+
+      - name: Cache node_modules
+        id: cache-node-modules
+        uses: actions/cache@v3
+        with:
+          path: |
+            **/node_modules
+            ~/.npm
+          key: modules-${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Build project
-        run: npm run build --if-present
+  lint:
+    name: Lint codebase
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - uses: actions/checkout@v4
+      - name: Lint codebase
+        run: npm run lint
 
-      - name: Run lint
-        run: npm run lint --if-present
+  typecheck:
+    name: TypeScript checks
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - uses: actions/checkout@v4
+      - name: Type check
+        run: npm run typecheck
 
+  test:
+    name: Run tests + coverage
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - uses: actions/checkout@v4
       - name: Run tests
-        run: npm test
+        run: npm run test:ci
+      - name: Upload coverage
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage-report
+          path: coverage/
+
+  build:
+    name: Build projects
+    runs-on: ubuntu-latest
+    needs: [setup, lint, typecheck, test]
+    steps:
+      - uses: actions/checkout@v4
+      - name: Build project
+        run: npm run build
+
+  security:
+    name: Security scan
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - uses: github/codeql-action/init@v2
+        with:
+          languages: javascript
+      - uses: github/codeql-action/analyze@v2
