--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     name: Setup & Install
     runs-on: ubuntu-latest
     outputs:
-      node_modules_cache_key: ${{ steps.cache-node-modules.outputs.cache-hit }}
+      cache_key: modules-${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -39,6 +39,20 @@ jobs:
     needs: setup
     steps:
       - uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '23.x'
+          
+      - name: Restore node_modules cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            **/node_modules
+            ~/.npm
+          key: ${{ needs.setup.outputs.cache_key }}
+          
       - name: Lint codebase
         run: npm run lint
 
@@ -48,6 +62,20 @@ jobs:
     needs: setup
     steps:
       - uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '23.x'
+          
+      - name: Restore node_modules cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            **/node_modules
+            ~/.npm
+          key: ${{ needs.setup.outputs.cache_key }}
+          
       - name: Type check
         run: npm run typecheck
 
@@ -57,8 +85,23 @@ jobs:
     needs: setup
     steps:
       - uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '23.x'
+          
+      - name: Restore node_modules cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            **/node_modules
+            ~/.npm
+          key: ${{ needs.setup.outputs.cache_key }}
+          
       - name: Run tests
         run: npm run test:ci
+        
       - name: Upload coverage
         uses: actions/upload-artifact@v3
         with:
@@ -71,6 +114,20 @@ jobs:
     needs: [setup, lint, typecheck, test]
     steps:
       - uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '23.x'
+          
+      - name: Restore node_modules cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            **/node_modules
+            ~/.npm
+          key: ${{ needs.setup.outputs.cache_key }}
+          
       - name: Build project
         run: npm run build
 
@@ -79,7 +136,25 @@ jobs:
     runs-on: ubuntu-latest
     needs: setup
     steps:
-      - uses: github/codeql-action/init@v2
+      - uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '23.x'
+          
+      - name: Restore node_modules cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            **/node_modules
+            ~/.npm
+          key: ${{ needs.setup.outputs.cache_key }}
+          
+      - name: CodeQL Initialize
+        uses: github/codeql-action/init@v2
         with:
           languages: javascript
-      - uses: github/codeql-action/analyze@v2
+          
+      - name: CodeQL Analysis
+        uses: github/codeql-action/analyze@v2
